# timeahead-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
tests/: test_tools.py
timeahead_mcp/: __init__.py  client.py  server.py
timeahead_mcp/tools/: discovery.py  news.py  recommendations.py  risk.py  trust.py
